

DescTools 0.99.49 (2023-05-17)
------------------------------

NEW FUNCTIONS ADDED:
  * 

UPDATED FUNCTIONS:
  * Better solution for the set.seed issue in DunnetTest 
    (Credits to Michael Chirico in 
	https://github.com/AndriSignorell/DescTools/pull/102)
  
  * BoxedText() uses xy.coords now.
  
BUGFIXES:
  * MultinomCI method goodman uses the correct chisquare quantile now.
    (Credits to yanka3 and Vilmantas Gegzna)




DescTools 0.99.48 (2023-02-17)
------------------------------

NEW FUNCTIONS ADDED:
  * Nf() shortcut for as.numeric(factor(x, ...)).

UPDATED FUNCTIONS:
  * RndPairs() can deliver associated pairwise nominal random variables.
  * WeekDay() and Month() will return an ordered factor instead of a factor.
  * Recode() can recode NAs to a new code.
  * TMod() can be given an order for the models.
  * GTest gains a rescale.p argument.
  
BUGFIXES:
  * DunnettTest will not use .Random.seed in background jobs.




DescTools 0.99.47 (2022-10-22)
------------------------------

UPDATED FUNCTIONS:
  * Gini() has been recoded to gain better support for weights.
  * PlotProbDist() gains a dots argument.
  * BoxedText() has two renamed arguments old txt.col has be
    renamed to col and old col has been renamed to bg.
  * Set fixed global .RandomSeed for Dunnett-test in order to get 
    reproducible results.
  
BUGFIXES:
  * Corrected a bug in confidence intervals for Cohen's D.
    (Credits to Jerry Tao)





DescTools 0.99.46 (2022-08-30)
------------------------------

UPDATED FUNCTIONS:
  * Append() gains a TOne interface, to be able to add rows to a Table 1 (TOne) object.
  * BarText() internally uses the more flexible BoxedText() instead of text().
  * DunnTest, ConoverTest, VanWaerdenTest, NemenyiTest, DunnettTest get new organizing
    code analogue to kruskal.test in order to handle characters as factors correctly.
  * DunnTest() returns the matrix of p-Values in addition.  
  * Format() gains a new interface for ftables.
  
BUGFIXES: