@@ -12,10 +12,14 @@ UPDATED FUNCTIONS:
 	https://github.com/AndriSignorell/DescTools/pull/102)
   
   * BoxedText() uses xy.coords now.
+  * Two new methods for MultinomCI() have been implemented 
+    (Fitzpatrick-Scott and Quesensberry-Hurst).
   
 BUGFIXES:
   * MultinomCI method goodman uses the correct chisquare quantile now.
     (Credits to yanka3 and Vilmantas Gegzna)
+  * LogStInv() would not have used the correct base for the log.
+    (Credits to Martin Maechler)  
 
 
 
